--- a/.github/workflows/publish-containers.yaml
+++ b/.github/workflows/publish-containers.yaml
@@ -31,8 +31,11 @@ jobs:
       # Expose matched filters as job 'services' output variable
       services: ${{ steps.filter.outputs.changes }}
     steps:
-    # For pull requests it's not necessary to checkout the code
-    - uses: dorny/paths-filter@v3
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Filter changed services
+      uses: dorny/paths-filter@v3
       id: filter
       with:
         # See docs for how to add more services. Needs folder refactoring.
